Fix: image not showing full width

--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -266,6 +266,10 @@
 
   img {
     height: 60px;
+
+    @media screen and (min-width: $tablet) {
+      padding: 0 20px;
+    }
   }
 
   p {
